Makes HTML slightly more semantic and fixes overflow issues
Changed <strong> tags into h4 where appropriate, and made text that is
too long for the node to be hidden with ellipses.

Also adds two more test plans. One is an estimate of a query and the
other is the same query but with the actual plan.

--- a/stylesheets/_showplan-base.scss
+++ b/stylesheets/_showplan-base.scss
@@ -105,6 +105,7 @@
 	details {
 	    width: 260px;
 	    display: inline-block;
+			text-overflow: ellipsis;
 			@include transition(width .1s ease);
 			@include transition(height .1s ease);
 
@@ -118,7 +119,12 @@
 			}
 
 			li {
-					margin-left:2em;
+					margin-left: 2em;
+			}
+
+			div {
+				overflow: hidden;
+				text-overflow: ellipsis;
 			}
 	}
 
